[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Slime_Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/textures/Mobile RPG Mockup.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://scripts/Battle.gd" type="Script" id=4]
[ext_resource path="res://scripts/PlayerStats.gd" type="Script" id=5]
[ext_resource path="res://scripts/Stats_Panel.gd" type="Script" id=6]
[ext_resource path="res://scenes/Sword_Action_Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/Heal_Action_Button.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Rat_Enemy.tscn" type="PackedScene" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Fade_To_New_Room_Animation"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade_ColorRect:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade_ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 9 ), ExtResource( 1 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )

[node name="Enemy_Poistion2D" type="Position2D" parent="."]
position = Vector2( 46, 29 )

[node name="Slime_Enemy" parent="Enemy_Poistion2D" instance=ExtResource( 1 )]

[node name="Mockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.156863 )
position = Vector2( 45, 80 )
texture = ExtResource( 2 )

[node name="UI_Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="Stats_Panel" type="Panel" parent="UI_Control"]
margin_left = 3.0
margin_top = 52.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 6 )

[node name="Stats_HBoxContainer" type="HBoxContainer" parent="UI_Control/Stats_Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Hp_Label" type="Label" parent="UI_Control/Stats_Panel/Stats_HBoxContainer"]
margin_top = 3.0
margin_right = 25.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "HP
25"
align = 1

[node name="Ap_Label" type="Label" parent="UI_Control/Stats_Panel/Stats_HBoxContainer"]
margin_left = 29.0
margin_top = 3.0
margin_right = 54.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "AP
3"
align = 1

[node name="Mp_Label" type="Label" parent="UI_Control/Stats_Panel/Stats_HBoxContainer"]
margin_left = 58.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "MP
25"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="UI_Control/Stats_Panel"]
margin_left = -3.0
margin_top = -52.0
margin_right = 87.0

[node name="Next_Room_Button" type="Button" parent="UI_Control/Stats_Panel/CenterContainer"]
visible = false
margin_left = 28.0
margin_top = 19.0
margin_right = 62.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 13 )
text = "FORWARD"

[node name="Textbox_Panel" type="Panel" parent="UI_Control"]
margin_left = -2.0
margin_top = 137.0
margin_right = 92.0
margin_bottom = 162.0
__meta__ = {
"_edit_group_": true
}

[node name="UI_GridContainer" type="GridContainer" parent="UI_Control"]
margin_left = 9.0
margin_top = 73.0
margin_right = 81.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_group_": true
}

[node name="Sword_Action_Button" parent="UI_Control/UI_GridContainer" instance=ExtResource( 7 )]

[node name="Heal_Action_Button" parent="UI_Control/UI_GridContainer" instance=ExtResource( 8 )]
margin_left = 40.0
margin_right = 72.0

[node name="Fade_ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade_To_New_Room_Animation = SubResource( 1 )
anims/RESET = SubResource( 2 )

[connection signal="ap_changed" from="PlayerStats" to="UI_Control/Stats_Panel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI_Control/Stats_Panel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI_Control/Stats_Panel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI_Control/Stats_Panel/CenterContainer/Next_Room_Button" to="." method="_on_Next_Room_Button_pressed"]
